# cmulab_allosaurus

./: README.md  setup.cfg
cmulab_allosaurus/: __init__.py  __main__.py  model.py
