[metadata]
name = cmulab_allosaurus
version = 0.0.1
description = CMULAB plugin for Allosaurus
author = Zaid Sheikh
url = https://github.com/zaidsheikh/cmulab_allosaurus
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    allosaurus

[options.entry_points]
cmulab.plugins =
    allosaurus = cmulab_allosaurus:get_results
